...
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/bg_top_tab"
            android:clickable="true"
            android:contentDescription="Folders"
            android:ellipsize="end"
            android:focusable="true"
            android:gravity="center"
            android:maxLines="1"
            android:minWidth="0dp"
            android:text="Folders"
...
